--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "chartjs": "^0.3.24",
     "formik": "^2.4.6",
+    "lottie-react": "^2.4.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
