modified the backend

--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
@@ -16,5 +15,6 @@
     "express": "^4.21.2",
     "google-auth-library": "^9.15.1",
     "mongoose": "^8.10.0"
-  }
+  },
+  "description": ""
 }
