--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 GOOGLE_CLIENT_ID=925604510796-3llp43p19cbavemnve9n777ucrv4qbjv.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-MONGODB_URI=mongodb://localhost:27017/your-database-name
+MONGODB_URI=mongodb://localhost:27017/tradezone
 PORT=5000
