updated newly planned schema and feeded data to atlas

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 GOOGLE_CLIENT_ID=925604510796-3llp43p19cbavemnve9n777ucrv4qbjv.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 MONGODB_URI=mongodb://localhost:27017/tradezone
+MONGODB_ATLAS_URI=mongodb+srv://Chandru:bdognom%40chandru%23192003@cluster0.yddby.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
