--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "seed": "node utils/seedDatabase.js"
   },
   "keywords": [],
@@ -17,5 +17,8 @@
     "google-auth-library": "^9.15.1",
     "mongoose": "^8.10.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
