--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.0",
-    "axios": "^1.7.9",
+    "axios": "^1.8.1",
     "chartjs": "^0.3.24",
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
@@ -32,6 +32,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
+    "recharts": "^2.15.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
