--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node server.js",
     "test": "jest",
-    "seed": "node utils/seedDatabase.js"
+    "seed": "node utils/seedDatabase.js",
+    "update-users": "node scripts/updateUserBusinesses.js"
   },
   "keywords": [],
   "author": "",
