added bank inventory logic

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 VITE_GOOGLE_CLIENT_ID=925604510796-3llp43p19cbavemnve9n777ucrv4qbjv.apps.googleusercontent.com
-VITE_API_URL=http://localhost:5000/api 
+VITE_API_URL=http://localhost:5000/api
+VITE_ADMIN_TOKEN=67c022db840e144cc3b07fd9 
